syntax = "proto3";

option csharp_namespace = "EcoGrpc.Customer";

package customer.v1;

import "google/protobuf/empty.proto";

service Customer {
  rpc GetCustomerByLookUp(CustomerLookUpModel) returns (CustomerModel);
  rpc GetCustomers(google.protobuf.Empty) returns (stream CustomerModel);
  rpc InsertCustomer(CustomerModel) returns (StatusMessage);
  rpc GetImage (RequestImage) returns (DataChunk);
  rpc UploadImages (stream DataChunk) returns (StatusMessage);
}

message CustomerLookUpModel {
  int32 id = 1;
}

message CustomerModel {
  int32 id = 1;
  string name = 2;
  string emailAddress = 3;
  string address = 4;
}

message StatusMessage {
  string message = 1;
}

message RequestImage {
  string path = 1;
}

message DataChunk {
  bytes data = 1;
}